# dan

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX_EXECUTION_PLAN.md  CONFIG_SOT_TASKS.md  FIXME.md  HANDOFF_2026-07-07.md  HANDOFF_2026-07-09.md  ISSUESTOFIX.md  LICENSE  MUST-READ-GLOS-PROZODIA.md  PRODUCTION_UNRESTRICTED_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-3-final-baseline-2379.json  task-3-report.md  task-4-final-baseline-2385.json  task-4-red-baseline-2385.json  task-4-report.md  task-6-report.md  task-7-report.md
config/: dan.example.toml  jarvis.example.toml  owner.example.toml  voices.example.toml
config/persona/: DAN.md  gangus-1.md  gangus-2.md  gangus-3.md  jarvis.md  mentor.md
config/voice/: gains.json  personas.example.toml  personas.toml  pronunciations.example.toml  pronunciations.toml
dan/: __init__.py  cli.py  config.py  config_registry.py  logging.py  paths.py  persona.py  release_audit.py
dan/api/: __init__.py  client.py  event_safety.py  routes_audio.py  routes_brain.py  routes_events.py  routes_health.py  routes_history.py  routes_input.py  routes_intake.py  routes_memory.py  routes_runtime.py  routes_sessions.py  routes_settings.py  routes_state.py  routes_tools.py  routes_voice.py  routes_workers.py  websocket.py
dan/audio/: __init__.py  devices.py  execution.py  models.py  policy.py
dan/brain/: __init__.py  auto_detect.py  base.py  claude_cli_adapter.py  claude_cli_contract.py  claude_models.py  codex_cli_adapter.py  codex_cli_contract.py  context_builder.py  eco_brain_adapter.py  groq_adapter.py  manager.py  mock_adapter.py  ollama_adapter.py  openai_adapter.py  qwen_adapter.py  speech_text.py  sync_adapter.py  test_adapter.py  tool_call_parser.py
dan/daemon/: __init__.py  app.py  intake.py  lifecycle.py  restart.py  state_machine.py  supervisor.py
dan/diagnostics/: legacy_dan.py
dan/events/: __init__.py  bus.py  models.py  types.py
dan/input/: __init__.py  hotkey.py  macos_event_tap.py
dan/install/: __init__.py  __main__.py  adapters.py  launchd.py  preflight.py
dan/jobs/: __init__.py  scheduler.py  standup.py
dan/macos/: __init__.py  accessibility.py  ax_backend.py  screen.py  terminal.py  vision_ocr.py
dan/mcp/: __init__.py  memory_server.py
dan/memory/: __init__.py  archive.py  compiler.py  evidence.py  inbox.py  items.py  manager.py  policies.py  retrieval.py  summarizer.py  sync.py
docs/: AGENT_PROMPT_TEMPLATE.md  AUDIO_RUNTIME.md  CO-JEST-GDZIE.md  CONTRACTS.md  DAN_CHANGE_GUARDS.md  DAN_CURRENT_STATE.md  DAN_PROJECT_RULES.md  DAN_ROADMAP.md  DECISIONS.md  DOCS_INDEX.md  GLOS-I-KOLEJKA.md  HANDOFF-PROSODY-2026-07-16.md  HANDOFF-voice-streaming-port.md  JARVIS_ARCHITECTURE.md  JARVIS_CHANGE_GUARDS.md  JARVIS_CURRENT_STATE.md  JARVIS_DOCS_PACKAGE_INDEX.md  JARVIS_DO_NOT_TOUCH.md  JARVIS_FIX_TASKS_HANDOFF.md  JARVIS_HISTORY.md  JARVIS_PROJECT_RULES.md  JARVIS_ROADMAP.md  LAUNCH_SUPERVISION.md  LEGACY_RUNTIME_FINDINGS.md  MACOS_CAPABILITIES.md  MACOS_OPERATOR_CONTRACT.md  MACOS_PERMISSION_MODEL.md  MASTER_PLAN.md  MEMORY_ARCHITECTURE.md  MEMORY_COMPILER.md  MEMORY_CONTRACT.md  MEMORY_OS_ARCHITECTURE.md  MIGRATION_INVENTORY.md  ODZYSKIWANIE.md  PANEL.md  PANEL_CONTRACT.md  PANEL_V4_UX_SPEC.md  PRODUCT.md  PROJECT_RULES.md  PROMPT-CLAUDE-HISTORIA-PROZODIA.md  (+11 more)
integrations/: inventory-producers.json  manifest.toml
jarvis/: __init__.py  cli.py  config.py  logging.py  paths.py
launchd/: com.dan.dand.plist.example  com.ozzy.jarvisd.plist.example
nemovisa/: config.json  nemovisa.py
release/: review-scope-v1.json
scripts/: dan  dan-checkout-hygiene  dan-cutover  dan-inventory  dan-panel  dan-release-audit  dan-release-checkpoint  dan-rollback  dan-test-baseline  dan-voice-acceptance  dand  dev-reset-local-state.sh  dobranocka_prepare.py  install-launchd.sh  install.sh  jarvis  jarvis-dan-report  jarvis-panel  jarvisd  smoke-audio-devices.sh  smoke-brain-switch.sh  smoke-claude-cli-brain.sh  smoke-e2e-mvp.sh  smoke-file-read.sh  smoke-memory-runtime.sh  smoke-persona-profile.sh  smoke-screen-read.sh  smoke-stream.sh  smoke-terminal.sh  smoke-text-runtime.sh  smoke-tool-continuation.sh  smoke-tools-approvals.sh  smoke-ui-act.sh  smoke-ui-read.sh  smoke-voice-listening.sh  smoke-voice-recorder.sh  smoke-voice-speech.sh  smoke-voice-stream.sh  smoke-voice-stt.sh  smoke-voice-turn.sh  (+3 more)
tests/: audio_guard_plugin.py  conftest.py  cutover_helpers.py  git_guards.py  test_active_reference_scan.py  test_adapter_contracts.py  test_api_cors.py  test_api_hardening.py  test_api_runtime_truth_contract.py  test_api_security_and_worker_regressions.py  test_api_smoke.py  test_api_stream.py  test_api_transport_token.py  test_approval_events.py  test_audio_devices.py  test_audio_execution_guard.py  test_audio_player.py  test_awaiting_approval_status.py  test_best_take_tool.py  test_brain_api.py  test_brain_cli_adapters.py  test_brain_cli_persistent_session.py  test_brain_cli_streaming.py  test_brain_cli_warm_adapter.py  test_brain_manager.py  test_brain_new_adapters.py  test_chatterbox_v3_pipeline.py  test_checkout_hygiene.py  test_claude_models.py  test_cli_config.py  test_cli_history.py  test_cli_input.py  test_cli_memory.py  test_cli_queue.py  test_cli_speak.py  test_config.py  test_config_registry.py  test_context_builder.py  test_cutover_host_adapter.py  test_cutover_no_replay.py  (+134 more)
(+335 files in other folders)
