[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "jarvis-runtime"
version = "4.2.0a0"
description = "Jarvis v4.2 local runtime daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ozzy" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
# Decreed voice toolchain (MASTER_PLAN §7.3/§7.4, Ozzy 2026-07-02). The
# runtime shells out to these — they are tools, not imports — so the core
# dependency list stays empty; this group documents the pinned decree set.
voice = [
  "supertonic==1.3.1",
  "mlx-whisper==0.4.3",
  "mlx-audio==0.4.4",
]
# Menu-bar shell (PANEL_CONTRACT §5, MASTER_PLAN H1). GUI-only dependency:
# the daemon and the test suite never import it (lazy import in menubar_app).
panel = [
  "pyobjc-framework-Cocoa==12.2.1",
  "pyobjc-framework-WebKit==12.2.1",
]

[project.scripts]
jarvisd = "jarvis.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]
