[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "DAN"
version = "4.2.0a0"
description = "DAN local runtime daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ozzy" }]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "build>=1.2",
  "numpy>=1.26,<3",
]
# Decreed voice toolchain (MASTER_PLAN §7.3/§7.4, Ozzy 2026-07-02).
# Supertonic/MLX remain external tools; numpy is the explicit in-process
# dependency of the offline prosody analyzer and WAV assembler.
voice = [
  "numpy>=1.26,<3",
  "supertonic[serve]==1.3.1",
  "mlx-whisper==0.4.3",
  "mlx-audio==0.4.4",
  "pyobjc-framework-AVFoundation==12.2.1",
]
# Menu-bar shell (PANEL_CONTRACT §5, MASTER_PLAN H1). GUI-only dependency:
# the daemon and the test suite never import it (lazy import in menubar_app).
panel = [
  "pyobjc-framework-Cocoa==12.2.1",
  "pyobjc-framework-WebKit==12.2.1",
  # AXIsProcessTrusted: detect (not silently swallow) a missing Accessibility
  # grant, without which the global PTT hotkey monitor never fires.
  # ApplicationServices imports CoreText imports Quartz, so pin the whole
  # chain — the AX symbol is unreachable if any link is missing.
  "pyobjc-framework-ApplicationServices==12.2.1",
  "pyobjc-framework-Quartz==12.2.1",
]

[project.scripts]
dan = "dan.cli:main"
dand = "dan.cli:daemon_main"
dan-memory-mcp = "dan.mcp.memory_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# The audio guard blocks a test process from spawning afplay/say/supertonic.
# It only guards a run it is actually loaded into, and nothing else registers
# it: conftest checks for it but cannot load it, and CI runs a bare `pytest`.
# Without this line the guard sat in the tree unarmed, its own 16 tests red,
# and a stray test could talk out loud on the owner's speakers mid-session.
addopts = "-p tests.audio_guard_plugin"
markers = [
  "live_manual: requires live hardware or runtime and is refused by dan-test-baseline",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["dan"]
